# minigc

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  gc.c  gc.h  minigc.c  minigc.h
